--- a/exercise4.css
+++ b/exercise4.css
@@ -22,18 +22,29 @@ header{
 .flexbox {
 
     display: flex;
+    align-items: stretch;
+    min-height: 300px;
     
     
+  }
+  .flexbox > nav {
+    background-color: #FFE66D;
+    width: 30%;
+    text-align: left;
+    font-size: 10px;
+    padding-left: 10px;
+    padding-top: 10px;
+  }
+  
+  .flexbox > article {
+    background-color: #f1f1f1;
+    width: 70%;
+    text-align: left;
+    font-size: 16px;
   }
 
 
 nav{
-
-    background-color: #FFE66D;
-    
-    min-height: 300px;
-    margin:0;
-    padding:40px;
     
 
 }
@@ -54,7 +65,7 @@ article{
 
 }
 
-img{
+.article-img {
     padding: 10px;
     width: 40%;
     float: right;
@@ -75,10 +86,7 @@ footer{
 .footerimages{
 
     width: 30px;
+    float: center;
+}
 
-  
-}
-.footerp{
-    
-}
 
