--- a/exercise6.css
+++ b/exercise6.css
@@ -1,4 +1,15 @@
+body {
+    letter-spacing: 0.0625em;
+  }
+ 
+  a {
+    color: #64a19d;
+  }
 
+  a:focus, a:hover {
+    text-decoration: none;
+    color: #3c6360;
+  }
 
 /*Navigation */
 #mainNav {
@@ -9,8 +20,8 @@
   #mainNav .navbar-toggler {
     font-size: 80%;
     padding: 0.75rem;
-    color: #64a19d;
-    border: 1px solid #64a19d;
+    color: black;
+    border: 1px solid black;
   }
 
   #mainNav.navbar-shrink .nav-link {
@@ -24,6 +35,8 @@
     outline: none;
     border-bottom: 0.25rem solid #64a19d;
   }
+
+
 
   /*Header */
   .masthead {
@@ -49,3 +62,79 @@
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
   }
+
+  .masthead h2 {
+    max-width: 30rem;
+    font-size: 1.5rem;
+  }
+
+/*articles*/
+  .article-section {
+    padding: 10rem 0;
+  }
+  
+  .article-section .featured-text {
+    padding: 2rem;
+  }
+
+  .article-section .article-text {
+    padding: 3rem;
+    font-size: 90%;
+  }
+
+
+
+/* contact form */
+
+  .contact-form{
+    background: #fff;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    width: 70%;
+}
+
+
+
+.contact-form form{
+    padding: 14%;
+}
+.contact-form form .row{
+    margin-bottom: -7%;
+}
+.contact-form h3{
+    margin-bottom: 8%;
+    margin-top: -10%;
+    text-align: center;
+    color: #64a19d;
+}
+.contact-form .btnContact {
+    width: 75%;
+    border: none;
+    padding: 1.5%;
+    background: #64a19d;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+}
+.btnContactSubmit
+{
+    width: 50%;
+    border-radius: 1rem;
+    padding: 1.5%;
+    color: #fff;
+    background-color: #0062cc;
+    border: none;
+    cursor: pointer;
+}
+
+
+/* footer*/
+
+.footer
+{
+    
+    padding-bottom: 20px;
+    padding-top: 20px;
+    background-color: #f8f9fa;
+
+}
